Se actualizan los archivos

--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/estilos.css
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/estilos.css
@@ -20,4 +20,20 @@ body
 }
 img{
 		margin-left: 50px;
+		border-radius: 20px;
+}
+#divClass{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+a{
+	padding-top: 50px;
+}
+#divClassUno{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	
 }
