--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/estilos.css
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/estilos.css
@@ -1,39 +1,3 @@
-body
-{
-		background-color: gray;
-}
-#thirdDiv 
-{
-		height: 600px;
-		width: 500px;
-		border: 10px solid red;
-		padding: 50px;
-		border-radius: 30px;
-		margin-right: auto;
-		margin-left: auto;
-}
-
-#spanId
-{
-		font-size: 18px;
-		margin: 50px;
-}
-img{
-		margin-left: 50px;
-		border-radius: 20px;
-}
-#divClass{
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-}
-a{
-	padding-top: 50px;
-}
-#divClassUno{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	text-align: center;
-	
+.allContenedor{
+    background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v462-n-130-textureidea_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9465282a2b0a375f4f5b120d7bbad882");
 }
