Se completa y se sube la tarea.

--- a/01-CSS/CSS-Positioning/homework/homework.css
+++ b/01-CSS/CSS-Positioning/homework/homework.css
@@ -7,7 +7,8 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display: block;
+    text-align: center;
 }
 
 
@@ -15,24 +16,54 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Acá va tu código */
 
+#ejercicioDos{
+    display: none;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
 
-
+#ejercicioTres{
+    position: relative;
+    left: 200px;
+    top: 100px;
+}
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
 
+#ejercicioCuatro{
 
+    position: fixed;
+    top: 0px;
+    right: 0px;
+}
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
 
-
+#ejercicioCinco{
+    display: flex;
+    justify-content: space-around;
+}
 
 /* Ejercicio 6. */
+
+#ejercicioCinco{
+    flex-direction: row-reverse;
+}
+
+/* Ejercicio 7. */
+
+#elementoTres{
+    align-self: center;
+}
+
+#ejercicioSiete{
+    display: flex;
+    
+}
